--- a/css/todos.css
+++ b/css/todos.css
@@ -6,6 +6,10 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.todo-list li {
+    cursor: pointer;
+}
+
 .done {
     text-decoration: line-through;
 }
