--- a/css/todos.css
+++ b/css/todos.css
@@ -6,8 +6,49 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+header, footer {
+    display: flex;
+    align-items: center;
+    height: 5vh;
+
+    padding-inline: 10px;
+    background-color: lightblue;
+}
+
+header {
+    margin-block-end: .5rem;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+
+    min-height: calc(100vh - 10vh - 1.5rem);
+}
+
+.add-todo {
+    padding: 10px;
+    background-color: darkcyan;
+}
+
+.todo-list {
+    padding: 0;
+    list-style: none;
+}
+
 .todo-list li {
+    display: flex;
+    padding: 3px 10px;
+    border-block-end: 1px solid gray;
     cursor: pointer;
+}
+
+.todo-list li:nth-child(odd) {
+    background-color: lightgray;
+}
+
+.todo-list li span{
+    flex-grow: 1;
 }
 
 .done {
