--- a/css/todos.css
+++ b/css/todos.css
@@ -1,66 +1,69 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-header, footer {
-    display: flex;
-    align-items: center;
-    height: 5vh;
+header,
+footer {
+  display: flex;
+  align-items: center;
+  height: 5vh;
 
-    padding-inline: 10px;
-    background-color: lightblue;
+  padding-inline: 10px;
+  background-color: lightblue;
 }
 
 header {
-    margin-block-end: .5rem;
+  margin-block-end: 0.5rem;
 }
 
 footer {
-    justify-content: space-between;
+  justify-content: space-between;
 }
 
 main {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 
-    min-height: calc(100vh - 10vh - 1.5rem);
+  min-height: calc(100vh - 10vh - 1.5rem);
 }
 
-.add-todo, .filter {
-    padding: 10px;
-    background-color: darkcyan;
-    margin-block-end: 10px;
+.add-todo,
+.filter {
+  padding: 10px;
+  background-color: darkcyan;
+  margin-block-end: 10px;
 }
 
 .modal {
-    background-color: lightblue;
+  background-color: lightblue;
 }
 
 .todo-list {
-    padding: 0;
-    list-style: none;
+  padding: 0;
+  list-style: none;
 }
 
 .todo-list li {
-    display: flex;
-    gap: 5px;
-    padding: 3px 10px;
-    border-block-end: 1px solid gray;
-    cursor: pointer;
+  display: flex;
+  gap: 5px;
+  padding: 3px 10px;
+  border-block-end: 1px solid gray;
+  cursor: pointer;
 }
 
 .todo-list li:nth-child(odd) {
-    background-color: lightgray;
+  background-color: lightgray;
 }
 
-.todo-list li span{
-    flex-grow: 1;
+.todo-list li span {
+  flex-grow: 1;
 }
 
 .done {
-    text-decoration: line-through;
+  text-decoration: line-through;
 }
